--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Budgeting - React + Redux Sample</title>
+    <title>React + Babel + Redux + WebPack</title>
   </head>
   <body>
     <div id="root"></div>
